--- a/dg.ipynb
+++ b/dg.ipynb
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
     "    print(f\"  V(3, 0, -2) = {mu_specific:.6f} (immediate exit payoff)\")\n",
     "else:\n",
     "    print(f\"  μ_it ≤ μ(3,0), firm STAYS\")\n",
-    "    print(f\"  V(3, 0, -2) = {mu_30:.6f} (current profit + discounted continuation)\")"
+    "    print(f\"  V(3, 0, -2) = {mu_30:.6f} (current profit + continuation value)\")"
    ]
   },
   {
@@ -967,16 +967,6 @@
       "  Iter 0: diff=1.750125e+02\n",
       "  Iter 50: diff=1.886448e-04\n",
       "  Converged in 100 iterations, final diff: 9.115940e-09\n",
-      "\n",
-      "======================================================================\n",
-      "Results Comparison\n",
-      "======================================================================\n",
-      "  Baseline (no tax):\n",
-      "    Average firms: 3.446\n",
-      "  With 5-unit entry tax:\n",
-      "    Average firms: 3.342\n",
-      "  Effect of tax:\n",
-      "    Change: -0.104 firms (-3.0%)\n",
       "\n",
       "======================================================================\n",
       "Results Comparison\n",
@@ -1253,23 +1243,6 @@
      "text": [
       "\n",
       "Steps B-C: Setting up forward simulation...\n",
-      "\n",
-      "Computing Lambda values at true parameters...\n",
-      "(This may take a minute...)\n",
-      "\n",
-      "Sample Lambda values at true parameters:\n",
-      "     State       Λ(N,x)      d̂(N,x)   Φ((Λ-μ)/σ)\n",
-      "--------------------------------------------------\n",
-      "(2, 0)         12.5954       0.9900       0.9997\n",
-      "(3, 0)          7.2764       0.9412       0.8457\n",
-      "(4, 0)          5.8053       0.7072       0.6406\n",
-      "\n",
-      "Sample Lambda^E values at true parameters:\n",
-      "     State     Λ^E(N,x)       ê(N,x) Φ((Λ^E-γ)/σ)\n",
-      "--------------------------------------------------\n",
-      "(0, 0)         34.7499       0.5000       1.0000\n",
-      "(1, 0)         13.7697       0.9900       1.0000\n",
-      "(2, 0)          7.4282       0.8519       0.8612\n",
       "\n",
       "Computing Lambda values at true parameters...\n",
       "(This may take a minute...)\n",
@@ -1584,50 +1557,6 @@
       "This will take several minutes as we simulate forward for each parameter guess...\n",
       "\n",
       "Initial guess: μ=8.47, σ_μ=2.24, γ=6.98, σ_γ=2.24\n",
-      "\n",
-      "======================================================================\n",
-      "IMPROVED Estimation Results\n",
-      "======================================================================\n",
-      "\n",
-      "True Parameters:\n",
-      "  μ        = 5.0000\n",
-      "  σ_μ      = 2.2361\n",
-      "  γ        = 5.0000\n",
-      "  σ_γ      = 2.2361\n",
-      "\n",
-      "Estimated Parameters:\n",
-      "  μ̂        = 2.1898\n",
-      "  σ̂_μ      = 2.0204\n",
-      "  γ̂        = 0.3279\n",
-      "  σ̂_γ      = 4.4128\n",
-      "\n",
-      "Estimation Errors:\n",
-      "  Δμ       = -2.8102  (-56.2%)\n",
-      "  Δσ_μ     = -0.2157  (-9.6%)\n",
-      "  Δγ       = -4.6721  (-93.4%)\n",
-      "  Δσ_γ     = 2.1767  (97.3%)\n",
-      "\n",
-      "Objective function value: 1.099674\n",
-      "Number of iterations: 19\n",
-      "Optimization success: True\n",
-      "\n",
-      "======================================================================\n",
-      "Goodness of Fit Check\n",
-      "======================================================================\n",
-      "\n",
-      "Incumbent Stay Decisions - Sample States:\n",
-      "     State   d̂(data)      Φ(Λ̂)       Diff\n",
-      "---------------------------------------------\n",
-      "(2, 0)        0.9900     1.0000     0.0100\n",
-      "(3, 0)        0.9412     0.9712     0.0300\n",
-      "(4, 0)        0.7072     0.8353     0.1281\n",
-      "\n",
-      "Entry Decisions - Sample States:\n",
-      "     State    ê(data)    Φ(Λ̂^E)       Diff\n",
-      "---------------------------------------------\n",
-      "(0, 0)        0.5000     1.0000     0.5000\n",
-      "(1, 0)        0.9900     0.9974     0.0074\n",
-      "(2, 0)        0.8519     0.9050     0.0532\n",
       "\n",
       "======================================================================\n",
       "IMPROVED Estimation Results\n",
